nextcloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:34.0.0
          resources:
            requests:
              memory: 256Mi
              cpu: 25m
            limits:
              memory: 2Gi
              cpu: 1500m
          volumeMounts:
            - mountPath: /var/www/html
              name: html
            - mountPath: /var/www/html/data
              name: data

        - name: cron
          image: nextcloud:34.0.0
          command:
            - /cron.sh
          resources:
            requests:
              memory: 256Mi
              cpu: 25m
            limits:
              memory: 2Gi
              cpu: 1500m
          volumeMounts:
            - mountPath: /var/www/html
              name: html
            - mountPath: /var/www/html/data
              name: data
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: html
        - name: data
          persistentVolumeClaim:
            claimName: data
