nextcloud/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
