nextcloud/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: nextcloud
    gethomepage.dev/icon: nextcloud

spec:
  hostnames:
    - nextcloud.secondhomelab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nextcloud
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
