nextcloud/nextcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: nextcloud
    gethomepage.dev/icon: nextcloud

spec:
  hostnames:
    - nextcloud.secondhomelab.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nextcloud
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
